--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/Caro_Network.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\Admin\\Downloads\\Programs\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
+file.reference.sqljdbc42.jar=sqljdbc_4.2\\enu\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-5.0.8-bin.jar}
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
